MD Settings: Languages; limit platform specific code to the respective platform.

languages_page.js has a lot of platform specific code, but it was not properly
marked, so it was being included in unrelated platforms. This CLs cleans up the
code such that is only included in the platforms that it is actually used.
  - chromeos
  - chromeos or is_win
  - not is_macosx

This is a step towards deflaking/re-enabling the corresponding tests(for example
this makes it clear which platforms need a browser proxy abstraction).

BUG=692356
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:closure_compilation

Review-Url: https://codereview.chromium.org/2822863002
Cr-Commit-Position: refs/heads/master@{#465662}

Former-commit-id: eb8e8df2be632be5824072b96b3159bc2dacbab3